force-app/main/default/objects/SupportRequest__c/SupportRequest__c.object-meta.xml
<CustomObject>
    <description>Objecto que guarda los datos de las solicitudes de soporte.</description>
    <label>Solicitud soporte</label>
    <nameField>
        <displayFormat>SR{YYYYMMDD}-{0}</displayFormat>
        <label>Identificador solicitud</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitudes soporte</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>