force-app/main/default/objects/SupportRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Estado de la solicitud.</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ToManage</fullName>
                <label>Por gestionar</label>
            </value>
            <value>
                <fullName>InProcess</fullName>
                <label>En proceso</label>
            </value>
            <value>
                <fullName>PendingInternal</fullName>
                <label>Pendiente interno</label>
            </value>
            <value>
                <fullName>PendingCustomer</fullName>
                <label>Pendiente cliente</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Cerrado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>